<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MBudget</string>
    <string name="action_settings">Settings</string>
    <string name="title">LOGIN</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone Number</string>
    <string name="pass">Password</string>
    <string name="conf_pass">Confirm Password</string>
    <string name="signup">Signup</string>
    <string name="member">Already a member?</string>
    <string name="title_activity_signup">Signup</string>
    <string name="hello_world">Hello world!</string>

</resources>